# apichitfund

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLUSTERING_README.md  DYNAMIC_TABLES_README.md  Dockerfile  HIKVISION_README.md  JENKINS_SETUP.md  Jenkinsfile  Jenkinsfile.simple  QUICK_START.md  README.md  app.py  apply_interest_table.py  audit.py  auth.py  calculate_monthly_interest.sql  cleanup.bat  cleanup.sh  cluster.py  crud.py  database.py  dbconfig.py  debug.py  docker-compose.yml  dynamic_tables.py  dynamic_tables_routes.py  gunicorn.conf.py  hikvision_access.py  hikvision_advanced.py  hikvision_sdk_example.py  insert_interest_data.sql  interest_table_and_procedure.sql  main.py  middleware.py  migrations.py  models.py  monitor.py  (+21 more)
interest/: __init__.py  interest_routes.py  interest_service.py
payments/: payment_schemas.py  payments_routes.py
scripts/: local-ci.ps1  local-ci.sh
smchitfund-react/src/components/: PaymentPanel.tsx
